--- a/index.html
+++ b/index.html
@@ -86,6 +86,6 @@
 <footer>
 	<p>Made in NY <br>Copyright © Postcard Generator</p>
 </footer>
-
+<script src="sandbox.js"></script>
 </body>
 </html>
